# cyclist_qsl

./: Makefile  README.md  dune-project  qsl_test_res.txt  sl_test_res.txt  test_qsl_sl.sh  test_rules.sh  tests.txt  tipsandtricks.txt
benchmarks/qsl/: benchmark.py  benchmark.sh  formulae  qsl.defs
examples/: qsl.defs  sl.defs
src/: cyclist.odocl
src/configurator/: configurator.opam  dune-project
src/configurator/src/: dune
src/csexp/: dune
src/firstorder/: .merlin
src/generic/: .merlin  dune  proofrule.ml  prover.ml
src/generic/config/: .merlin  dune
src/hashcons/: .merlin  configure  dune  opam
src/hashset/: .merlin  dune
src/lib/: .merlin  dune
src/mparser/: .merlin  dune
src/procedure/: .merlin
src/quantitative_seplog/: .merlin  defs.ml  defs.mli  dune  form.ml  form.mli  heap.ml  heap.mli  heapsum.ml  heapsum.mli  indrule.ml  indrule.mli  num.ml  num.mli  pred.ml  pred.mli  preddef.ml  preddef.mli  prove.ml  qsl.mltop  qsl_symbols.ml  rules.ml  seq.ml  seq.mli  slinit.ml  test_stats.ml  tpred.ml  tpred.mli  tpreds.ml  tpreds.mli  uf.ml  unify.ml  unify.mli
src/re/deprecated/: .merlin
src/re/lib/: .merlin  dune
src/seplog/: .merlin  rules.ml
src/seq/: dune
src/while/: .merlin
