(library 
 (name quantitative_seplog)
 (public_name cyclist.quantitative_seplog)
 (libraries lib generic mparser_re)
 (modules
   (:standard 
      \ slinit
        prove)))

(executables
 (names
   prove)
 (public_names
   qsl_prove)
 (modules
   prove)
 (libraries lib generic quantitative_seplog))

(toplevel
 (name sltop)
 (libraries lib generic quantitative_seplog))

; (executable
;  (name        sltop)
;  (public_name sl.top)
;  (libraries  compiler-libs.toplevel lib generic seplog)
;  (modules sltop)
;  (link_flags (-linkall))
; (modes      byte))
