(ocamllex extract_obj)

(library
 (name configurator)
 (public_name configurator)
 (private_modules import dune_lang ocaml_config)
 (libraries unix cyclist.csexp)
 (flags
  (:standard
   -safe-string
   (:include flags/flags.sexp)))
 (special_builtin_support
  (configurator
   (api_version 1)))
 (instrumentation
  (backend bisect_ppx)))
